--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
                 </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container">
+                
+            </div>
+        </section>
     </main>
 
 
